Agregando finalName a pom para facilitar deploy

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>mic_email</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
